fix: fix case sensitivity
